# SyncLite

./: .gitattributes  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION.md  GETTING_STARTED.md  PR_DESCRIPTION_UNIX_SCRIPT_ROBUSTNESS.md  README.md  about.html  funding.json  landing-page.html  pom.xml  synclite_platform_version.txt
.github/: FUNDING.yml  funding.json
.github/.well-known/: funding-manifest-urls
assembly/: platform.xml  platform_zip.xml  runtime_zip.xml
docs/: CNAME  GOOGLE_SITES_EMBED.md  about.html  get-started.md  index.html  landing-page.html
docs/documentation/: index.html
docs/getting-started/: index.html  index.md
synclite-code-samples/: PR_DESCRIPTION.md  README.md
synclite-code-samples/cpp/: CMakeLists.txt  README.md  synclite_rusqlite_postgres.cpp
synclite-code-samples/java/: README  README.md  SyncLiteDerbyAppenderDeviceApp.java  SyncLiteDerbyDeviceApp.java  SyncLiteDuckDBAppenderDeviceApp.java  SyncLiteDuckDBDeviceApp.java  SyncLiteH2AppenderDeviceApp.java  SyncLiteH2DeviceApp.java  SyncLiteHyperSQLAppenderDeviceApp.java  SyncLiteHyperSQLDeviceApp.java  SyncLiteSQLiteAppenderDeviceApp.java  SyncLiteSQLiteDeviceApp.java  SyncLiteStreamingDevice.java  SyncliteSqlitePostgresApp.java
synclite-code-samples/python/: README  README.md  synclite_derby_appender_device_app.py  synclite_derby_device_app.py  synclite_duckdb_appender_device_app.py  synclite_duckdb_device_app.py  synclite_h2_appender_device_app.py  synclite_h2_device_app.py  synclite_hypersql_appender_device_app.py  synclite_hypersql_device_app.py  synclite_rusqlite_postgres.py  synclite_streaming_device_app.py
synclite-code-samples/rust/: Cargo.toml  README.md  synclite_rusqlite_postgres.rs
synclite-code-samples/rust/.cargo/: config.toml
synclite-code-samples/synclite-db/: GETTING_STARTED.md  LANGUAGE_QUICKSTART.md  README  README.md
synclite-code-samples/synclite-db/c#/: SyncLiteDBClient.cs  testSyncLiteDB.cs
synclite-code-samples/synclite-db/cpp/: SyncLiteDBClient.cpp  testSyncLiteDB.cpp
synclite-code-samples/synclite-db/go/: SyncLiteDBClient.go  testSyncLiteDB.go
synclite-code-samples/synclite-db/java/: SyncLiteDBClient.java  TestSyncLiteDB.java
synclite-code-samples/synclite-db/node.js/: SyncLiteDBClient.js  testSyncLiteDB.js
synclite-code-samples/synclite-db/python/: SyncLiteDBCLient.py  testSyncLiteDB.py
synclite-code-samples/synclite-db/ruby/: SyncLiteDBClient.rb  testSyncLiteDB.rb
synclite-code-samples/synclite-db/rust/: Cargo.toml
synclite-code-samples/synclite-db/rust/src/: main.rs
synclite-code-samples/synclite-logger/: README.md
synclite-code-samples/synclite-logger/cpp/: README.md  synclite_duckdb.cpp  synclite_rusqlite.cpp  synclite_streaming.cpp
synclite-code-samples/synclite-logger/java/: README.md  SyncLiteBulkTxnParityApp.java  SyncLiteDerbyAppenderDeviceApp.java  SyncLiteDerbyDeviceApp.java  SyncLiteDuckDBAppenderDeviceApp.java  SyncLiteDuckDBDeviceApp.java  SyncLiteH2AppenderDeviceApp.java  SyncLiteH2DeviceApp.java  SyncLiteHyperSQLAppenderDeviceApp.java  SyncLiteJedisAPIApp.java  SyncLiteKafkaProduceApp.java  SyncLiteSQLiteAppenderDeviceApp.java  SyncLiteStoreAPIApp.java  SyncLiteStoreDeviceApp.java  SyncLiteStreamAPIApp.java  SyncLiteStreamingApp.java  SyncLiteStreamingDevice.java  SyncliteDeviceApp.java
synclite-code-samples/synclite-logger/python/: README.md  synclite_derby_device_app.py  synclite_duckdb.py  synclite_duckdb_appender_device_app.py  synclite_duckdb_device_app.py  synclite_duckdb_store.py  synclite_h2_device_app.py  synclite_hypersql_appender_device_app.py  synclite_logger.conf  synclite_rusqlite.py  synclite_rusqlite_store.py  synclite_sqlite_appender_device_app.py  synclite_sqlite_device_app.py  synclite_streaming.py
synclite-code-samples/synclite-logger/rust/: README.md  synclite.conf  synclite_device_artifacts_demo.rs  synclite_duckdb.rs  synclite_duckdb_store.rs  synclite_reinitialize.rs  synclite_rusqlite.rs  synclite_rusqlite_postgres.rs  synclite_rusqlite_store.rs  synclite_streaming.rs
synclite-code-samples/synclite-runtime/: README.md
synclite-code-samples/synclite-runtime/cpp/: CMakeLists.txt  README.md  synclite_duckdb.cpp  synclite_duckdb_store.cpp  synclite_logger.conf  synclite_rusqlite.cpp  synclite_rusqlite_store.cpp  synclite_streaming.cpp
synclite-code-samples/synclite-runtime/java/: SyncLiteKafkaProduceApp.java  SyncLiteStoreAPIApp.java  SyncLiteStoreDeviceApp.java  SyncLiteStreamAPIApp.java  SyncLiteStreamingApp.java  SyncliteDeviceApp.java  SyncliteSqlitePostgresApp.java
synclite-code-samples/synclite-runtime/python/: README.md  synclite_duckdb.py  synclite_duckdb_store.py  synclite_quickstart.py  synclite_rusqlite.py  synclite_rusqlite_store.py  synclite_streaming.py
synclite-code-samples/synclite-runtime/rust/: Cargo.toml  README.md  _out.txt  run_out.txt  sample_rusqlite_sqlite.db  synclite_duckdb.rs  synclite_duckdb_store.rs  synclite_reinitialize.rs  synclite_rusqlite.rs  synclite_rusqlite_postgres.rs  synclite_rusqlite_store.rs  synclite_streaming.rs
synclite-code-samples/synclite-runtime/rust/sample_rusqlite_sqlite.db.synclite/: sample_rusqlite_sqlite.db.synclite.backup  sample_rusqlite_sqlite.db.synclite.metadata  synclite_device_metadata.db
tools/: check_device_stats.py  inspect_sqllog.py  list_consolidated_tables.py  tmp_dump_cdclog.py  tmp_dump_tables.py  tmp_inspect_cdclog.py  tmp_inspect_meta.py  tmp_list_tables.py
