[package]
name = "synclite-logger-rust-samples"
version = "0.1.0"
edition = "2021"
publish = false

# These samples target the `synclite` crate from the SyncLite Platform repo.
#
# When run from inside the platform repo (recommended), the path dependency
# below resolves to the in-tree workspace crate and gives you the freshest
# code. If you copy this folder out of the platform repo, replace the path
# dependency with a published version:
#
#   synclite = "0.1"
#
[dependencies]
synclite = { path = "../../../synclite-logger-rust/crates/synclite" }
logger-core = { path = "../../../synclite-logger-rust/crates/logger/core" }
logger-db-traits = { path = "../../../synclite-logger-rust/crates/logger/db-traits" }
rusqlite = { version = "0.39", features = ["bundled"] }
duckdb = { version = "1.4", features = ["bundled"] }
postgres = "0.19"

[[example]]
name = "synclite_rusqlite"
path = "synclite_rusqlite.rs"

[[example]]
name = "synclite_rusqlite_postgres"
path = "synclite_rusqlite_postgres.rs"

[[example]]
name = "synclite_rusqlite_store"
path = "synclite_rusqlite_store.rs"

[[example]]
name = "synclite_duckdb"
path = "synclite_duckdb.rs"

[[example]]
name = "synclite_duckdb_store"
path = "synclite_duckdb_store.rs"

[[example]]
name = "synclite_streaming"
path = "synclite_streaming.rs"

[[example]]
name = "synclite_device_artifacts_demo"
path = "synclite_device_artifacts_demo.rs"

[[example]]
name = "synclite_reinitialize"
path = "synclite_reinitialize.rs"
